# pipeguard-cli

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cve_report.yml  new_check.yml
.github/workflows/: ci.yml  deploy.yml  release-drafter.yml  update-cve-db.yml
.zed/: debug.json
mock_server/: server.py
pipeguard/: __init__.py  cli.py  config.py  const.py  dataclasses.py  license.py
pipeguard/output/: autofix.py  formatter.py
pipeguard/scanner/: __init__.py  actionlint_runner.py  base.py  permissions.py  secrets_flow.py  sha_pinning.py  supply_chain.py
pipeguard/scanner/github_actions/: action_inventory.py  actionlint_runner.py  cve_check.py  cve_db.json  permissions.py  pull_request_target.py  secrets_flow.py  sha_pinning.py  supply_chain.py
scripts/: update_cve_db.py
tests/: conftest.py  test_action_inventory.py  test_cve_check.py  test_debug_leak.py  test_id_token.py  test_license.py  test_permissions.py  test_pull_request_target.py  test_scan_folder.py  test_sha_pinning.py  test_supply_chain.py
tests/fixtures/: cve_workflow.yml  id_token_unused.yml  id_token_used.yml  insecure_workflow.yml  permissions_missing.yml  permissions_ok.yml  permissions_overprovision.yml  pr_target_pwn.yml  pr_target_safe.yml  reusable_pinned.yml  reusable_unpinned.yml  secure_workflow.yml
tests/fixtures/e2e/: all_clean.yml  supply_chain_trusted.yml  supply_chain_untrusted.yml
tests/integration/: conftest.py  test_cli_exit_codes.py  test_config_integration.py  test_finding_id.py  test_output_formats.py  test_scanner_option.py  test_verbose.py
